@@ -137,6 +137,7 @@ plugins/ltac/extraargs.ml
 plugins/ltac/profile_ltac_tactics.ml
 ide/coqide_main.ml
 plugins/ssrmatching/ssrmatching.ml
+plugins/redeffect/redeffect.ml
 
 # other auto-generated files
 
